--- a/src/App.css
+++ b/src/App.css
@@ -56,16 +56,13 @@ Main content styles
   transition: background-color 0.3s ease;
 }
 
-/* .button:hover {
-  background-color: #0056b3;
-} */
 
-footer {
+/* footer {
   background-color: #f5f5f5;
   padding: 10px;
   text-align: center;
   font-size: 14px; 
-} 
+}  */
 
 
 
