--- a/src/App.css
+++ b/src/App.css
@@ -57,14 +57,6 @@ Main content styles
 }
 
 
-/* footer {
-  background-color: #f5f5f5;
-  padding: 10px;
-  text-align: center;
-  font-size: 14px; 
-}  */
-
-
 
 .App {
   margin: 2rem auto;
@@ -95,11 +87,11 @@ body {
   border-radius: 10px;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
   animation: App-logo-spin infinite 20s linear;
-}
+} */
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
