--- a/src/App.css
+++ b/src/App.css
@@ -88,11 +88,6 @@ body {
 }
 
 
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-} */
 
 .App-header {
   background-color: #282c34;
@@ -106,9 +101,9 @@ body {
   position: Center;
 }
 
-.App-link {
+/* .App-link {
   color: #61dafb;
-}
+} */
 
 @keyframes App-logo-spin {
   from {
