Removes @keyframes App-logo-spin from App.css

--- a/src/App.css
+++ b/src/App.css
@@ -101,10 +101,8 @@ body {
   position: Center;
 }
 
-/* .App-link {
-  color: #61dafb;
-} */
 
+/* 
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -112,7 +110,7 @@ body {
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 
 body {
